--- a/featured.html
+++ b/featured.html
@@ -149,12 +149,12 @@
     <div class="container support content-wrapper" id="Top">
         <div class="row">
 
-            <div class="col-md-8 col-5  d-md-inline col-12 ">
+            <div class="col-md-8 col-5  d-lg-inline d-none col-12 ">
                 <div class="comfort-life position-absolute">
                     <img class="w-100 h-100" src="imges/Screenshot (163).png"
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                     <div class="position-absolute d-flex mt-1">
-                        <label class="text-white whitening " >Popular Tags</label>
+                        <label class="text-white whitening ">Popular Tags</label>
                         <button class="mobiles-button">Featured</button>
                         <button class="mobiles-button">Android</button>
                         <button class="mobiles-button">Samsung</button>
@@ -173,7 +173,7 @@
                 </div>
 
             </div>
-            <div class="col-md-4 col-5" style="position: relative; left: 24px;">
+            <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 24px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
                     Phone Finder</button>
@@ -277,7 +277,7 @@
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/vivo-x200-ultra-ifr/-344x215/gsmarena_000.jpg"
                         alt="Moto G Stylus 5G">
                     <div class="review-card-body">
-                        <div class="review-card-title">vivo X200 Ultra  for review </div>
+                        <div class="review-card-title">vivo X200 Ultra for review </div>
                         <div class="review-card-meta">
                             <span>02 May 2025</span>
                             <span><i class="bi bi-chat-dots-fill"></i>40 comments</span>
@@ -396,7 +396,7 @@
 
             </div>
 
-            <div class="col-lg-4 col-md-6 col-12  bg-white p-3">
+            <div class="col-lg-4  col-12  bg-white p-3">
 
                 <img src="https://fdn.gsmarena.com/imgroot/static/banners/self/arenaev-300x250.jpg" class="w-100 "
                     style="width: 400px;" alt="">
@@ -544,7 +544,7 @@
                 <div style="background-color: #f2f2f2; height: 260px">
                     <div class="col-md-12">
                         <img src="https://st.arenaev.com/news/25/05/xiaomi-su7-faces-quality-concerns/-344x215/arenaev_001.jpg"
-                            style="width: -webkit-fill-available;" class=" rounded" alt="News Image">
+                            class=" rounded" alt="News Image">
                         <p class="fw-bold mb-1 wanted-12 mt-2 mx-auto text-center">
                             Xiaomi SU7 faces quality concerns, some owners sue the company
                     </div>
