--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
     <div class="container support content-wrapper" id="Top">
         <div class="row">
-            <div class="col-lg-4 col-12 conjection-froud d-block d-md-inline col-5 d-none d-md-inline bobile">
+            <div class="col-lg-4 col-6 conjection-froud d-block d-md-inline col-5 d-none d-md-inline bobile">
                 <div class="review-column-list-item review-column-list-item-secondary">
                     <img class="review-list-item-image "
                         src="https://fdn.gsmarena.com/imgroot/reviews/25/motorola-moto-g-stylus-2025/-347x151/gsmarena_001.jpg"
@@ -161,7 +161,7 @@
                     <h1>Google pIxel 9a Review</h1>
                 </div>
             </div>
-            <div class="col-12 col-lg-4 conjection-froud" style="margin-left: 7px;">
+            <div class="col-6 col-lg-4 conjection-froud" style="margin-left: 7px;">
                 <div class="comfort d-md-none d-block">
                     <div class="conjection position-absolute mx-2  my-2 ">
                         <i class="fa-solid fa-clock fa-sm" style="color: white;"></i>
@@ -187,7 +187,7 @@
                     <h1>Google pIxel 9a Review</h1>
                 </div>
             </div>
-            <div class="col-md-4 col-5 control-5">
+            <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 40px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
                     Phone Finder</button>
@@ -278,7 +278,7 @@
                 </h1>
                 <p class="d-none d-md-inline">The Cheat Sheet To The Best Phones to Get Right Now</p>
             </div>
-            <div class="col-md-4 col-12 wrapper sentizer-er ">
+            <div class="col-lg-4 col-md-6 wrapper sentizer-er ">
 
                 <div class="review-card">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/04/samsung-galaxy-a55-one-ui-7-beta-update/-344x215/gsmarena_001.jpg"
@@ -315,7 +315,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-12 wrapper sentizer-er ">
+            <div class="col-lg-4 col-md-6 wrapper sentizer-er ">
                 <div class="review-card">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/realme-c71-geekbench/-344x215/gsmarena_000.jpg"
                         alt="Moto G Stylus 5G">
@@ -351,7 +351,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4  bg-white ">
+            <div class="col-md-4 col-12  bg-white ">
                 <h5 class="text-secondary mt-2 ">Latest Devices</h5>
                 <div class="cent">
 
@@ -459,7 +459,7 @@
     </div>
     <div class="container mt-0 war ">
         <div class="row">
-            <div class="col-md-4" style="background-color: #EEEEEE;">
+            <div class="col-lg-4 col-md-6 col-12 sentizer-erx    " style="background-color: #EEEEEE;">
                 <div class="review-card">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/honor-magic-v5-thickness-rumor/-344x215/gsmarena_000.jpg"
                         alt="Moto G Stylus 5G">
@@ -606,7 +606,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-7 col-12 sentizer-er" style="background-color: #EEEEEE;">
+            <div class="col-lg-4 col-md-6 col-12 sentizer-er" style="background-color: #EEEEEE;">
 
                 <div class="review-card">
                     <img src="https://fdn.gsmarena.com/imgroot/reviews/25/google-pixel-9a/-347x151/gsmarena_001.jpg"
@@ -760,7 +760,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-5 col-12  bg-white p-3">
+            <div class="col-lg-4  col-12 sentizer-er  bg-white p-3">
                 <div class="center">
                     <table class="table table-sm custom-table">
                         <thead>
