--- a/rewies.html
+++ b/rewies.html
@@ -154,7 +154,7 @@
         <div class="row">
 
             <div class="col-md-8 col-5  d-md-inline col-12 ">
-                <div class="comfort-life-zone position-absolute">
+                <div class="comfort-life-zone d-none d-lg-block position-absolute">
                     <img src="imges/Screenshot (160).png" alt="">
                     <div class="position-absolute d-flex mt-1" style="top: 0;">
                         <label class="text-white whitening ">Popular Tags</label>
@@ -177,7 +177,7 @@
 
             </div>
 
-            <div class="col-md-4 col-5" style="position: relative;
+            <div class="col-md-4 col-5 d-none  d-lg-block" style="position: relative;
              left: 24px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
@@ -233,7 +233,7 @@
         <div class="row">
 
 
-            <div class="col-md-4 col-12 mt-2">
+            <div class="col-lg-4 col-md-6  mt-2">
                 <div class="review-card">
                     <img src="https://fdn.gsmarena.com/imgroot/reviews/25/motorola-moto-g-stylus-2025/-347x151/gsmarena_001.jpg"
                         alt="Moto G Stylus 5G">
@@ -381,7 +381,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-12 mt-2 ">
+            <div class="col-lg-4 col-md-6 mt-2 ">
                 <div class="review-card">
                     <img src="https://fdn.gsmarena.com/imgroot/reviews/25/nothing-cmf-phone-2-pro/-347x151/gsmarena_001.jpg"
                         alt="Nothing CMF Phone 2 Pro">
