--- a/videos.html
+++ b/videos.html
@@ -150,7 +150,7 @@
             <div class="col-8 comfort-life-zone">
                 <img src="imges/Screenshot (162).png" alt="">
             </div>
-            <div class="col-md-4 col-5" style="position: relative; left: 24px;">
+            <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 24px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
                     Phone Finder</button>
