--- a/compare.html
+++ b/compare.html
@@ -123,7 +123,7 @@
             <a href="phonefinder.html">Phone Finder</a>
             <a href="compare.html">Compare</a>
             <a href="#">Coverage</a>
-            <a href="contact">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
             <a href="#">Merch</a>
             <a href="#">Tip Us</a>
             <a href="#">Privacy</a>
@@ -149,13 +149,13 @@
     </div>
     <div class="container support content-wrapper" id="Top">
         <div class="row">
-            <div class="col-md-8 col-5  d-md-inline  ">
+            <div class="col-md-8 col-5  d-lg-inline d-none ">
                 <div class="comfort-life position-absolute">
                     <img class="w-100 h-100" src="imges/magnifient sectton.jpeg"
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                 </div>
             </div>
-            <div class="col-md-4 col-5" style="position: relative; left: 24px;">
+            <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 24px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
                     Phone Finder</button>
@@ -411,38 +411,7 @@
         </table>
 
 
-        <div id="bottom" class="container d-flex" style="max-width: 1034px;">
-            <div class="row align-items-center">
-                <div class="col-md-2 m-auto col-4 d-flex justify-content-center align-items-center "> <img
-                        src="https://fdn2.gsmarena.com/w/css/logo-gsmarena-com.png" alt="">
-                </div>
-                <div class="col-10 nav-wrap m-auto text-center ">
-                    <div class="nav-container">
-                        <a href="#">Home</a>
-                        <a href="#">News</a>
-                        <a href="#">Reviews</a>
-                        <a href="#">Compare</a>
-                        <a href="#">Coverage</a>
-                        <a href="#">Glossary</a>
-                        <a href="#">FAQ</a>
-                        <a href="#"> <i class="fa-solid fa-wifi fa-sm"></i> RSS</a>
-                        <a href="#"> <i class="fa-brands fa-youtube fa-sm"></i> YouTube</a>
-                        <a href="#"> <i class="fa-brands fa-instagram fa-sm"></i> Instagram</a>
-                        <a href="#"> <i class="fa-brands fa-tiktok fa-sm"></i>TikTok</a>
-                        <a href="#"> <i class="fa-brands fa-facebook-f fa-sm"></i> Facebook</a>
-                        <a href="#"> <i class="fa-brands fa-twitter fa-sm"></i>Twitter</a>
-                        <a href="#">© 2000-2025 GSMArena.com</a>
-                        <a href="#">Mobile version</a>
-                        <a href="#">Android app</a>
-                        <a href="#">Tools</a>
-                        <a href="#">Contact us</a>
-                        <a href="#">Merch store</a>
-                        <a href="#">Privacy</a>
-                        <a href="#">Terms of use</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </div>
 
     <div id="bottom" class="container d-flex mt-3" style="max-width: 1034px;">
