--- a/news.html
+++ b/news.html
@@ -149,8 +149,8 @@
     <div class="container support content-wrapper" id="Top">
         <div class="row">
 
-            <div class="col-md-8 col-5  d-md-inline col-12 ">
-                <div class="comfort-life d-flex align-items-baseline position-absolute ">
+            <div class="col-md-8 col-5  d-md-inline d-none col-12 ">
+                <div class="comfort-life d-none d-lg-flex align-items-baseline position-absolute ">
                     <img src="/images/ChatGPT Image May 14, 2025, 01_11_08 PM.png" alt="">
                     <div class="position-absolute d-flex mt-1">
                         <label  class="text-white whitening ">Popular Tags</label>
@@ -173,7 +173,7 @@
                 </div>
 
             </div>
-            <div class="col-md-4 col-5" style="    position: relative;
+            <div class="col-md-4 col-5 d-none d-lg-block " style="    position: relative;
     left: 24px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
@@ -227,7 +227,7 @@
     </div>
     <div class="container mt-0  ">
         <div class="row">
-            <div class="col-lg-4 mt-3" style="background-color: #EEEEEe;">
+            <div class="col-lg-4 col-md-6  mt-3" style="background-color: #EEEEEe;">
                 <div class="review-card">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/xiaomi-15s-pro-xring-o1-antutu-weibo/-344x215/gsmarena_000.jpg"
                         alt="Moto G Stylus 5G">
@@ -462,7 +462,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-12  bg-white p-3">
+            <div class="col-lg-4  col-12  bg-white p-3">
 
                 <img src="https://fdn.gsmarena.com/imgroot/static/banners/self/arenaev-300x250.jpg" class="w-100 "
                     style="width: 400px;" alt="">
