--- a/phonefinder.html
+++ b/phonefinder.html
@@ -150,12 +150,12 @@
         <div class="row">
            
             <div class="col-md-8 col-5  d-md-inline  ">
-                <div class="comfort-life position-absolute">
+                <div class="comfort-life position-absolute d-lg-block d-none ">
                     <img class="w-100 h-100" src="imges/magnifient sectton.jpeg"
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                 </div>
             </div>
-            <div class="col-md-4 col-5" style="position: relative; left: 24px;">
+            <div class="col-md-4 col-5 d-none d-lg-block " style="position: relative; left: 24px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
                     Phone Finder</button>
