--- a/contact.html
+++ b/contact.html
@@ -149,13 +149,13 @@
     <div class="container support content-wrapper" id="Top">
         <div class="row">
           
-            <div class="col-md-8 col-5  d-md-inline  ">
+            <div class="col-md-8 col-5  d-lg-inline d-none ">
                 <div class="comfort-life position-absolute">
                     <img class="w-100 h-100 " src="imges/download-first.jpeg"
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                 </div>
             </div>
-            <div class="col-md-4 col-5" style="position: relative;left: 24px;">
+            <div class="col-md-4 col-5 d-none d-lg-inline " style="position: relative;left: 24px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
                     Phone Finder</button>
