--- a/index.html
+++ b/index.html
@@ -803,10 +803,10 @@
                 <div class="center" style="margin-top: 12px;">
                     <table class="table table-sm custom-table">
                         <thead>
-                            <tr class="text-white" style="background-color: #82a2bd;">
-                                <th>#</th>
-                                <th>Device</th>
-                                <th>Favorites</th>
+                            <tr class="text-white" style="background-color: #14222D;">
+                                <th style="color: white;  font-size: 15px;  ">#</th>
+                                <th style="color: white;  font-size: 15px;">Device</th>
+                                <th style="color: white;  font-size: 15px;">Favorites</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -815,15 +815,15 @@
                                 <td class="text-start">Samsung Galaxy S24 Ultra</td>
                                 <td class="text-end">1,722</td>
                             </tr>
-                            <tr class="highlight-12">
+                            <tr  class="highlight-12">
+                                <th scope="row">2</th>
+                                <td class="text-start">Xiaomi Poco X6 Pro</td>
+                                <td class="text-end">911</td>
+                            </tr>
+                            <tr>
                                 <th scope="row">2</th>
                                 <td class="text-start">Samsung Galaxy S25 Ultra</td>
                                 <td class="text-end">926</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td class="text-start">Samsung Galaxy A55</td>
-                                <td class="text-end">911</td>
                             </tr>
                             <tr class="highlight-12">
                                 <th scope="row">4</th>
@@ -832,7 +832,7 @@
                             </tr>
                             <tr>
                                 <th scope="row">5</th>
-                                <td class="text-start">Xiaomi Poco X6 Pro</td>
+                                <td class="text-start">Samsung Galaxy A55</td>
                                 <td class="text-end">634</td>
                             </tr>
                             <tr class="highlight-12">
