--- a/rewies.html
+++ b/rewies.html
@@ -676,10 +676,11 @@
                 <div class="center w-100 " style="margin-top: 12px;">
                     <table class="table table-sm custom-table">
                         <thead>
-                            <tr class="text-white" style="background-color: #82a2bd;">
-                                <th>#</th>
-                                <th>Device</th>
-                                <th>Favorites</th>
+                            
+                               <tr class="text-white" style="background-color: #14222D;">
+                                <th style="color: white;  font-size: 15px;  ">#</th>
+                                <th style="color: white;  font-size: 15px;">Device</th>
+                                <th style="color: white;  font-size: 15px;">Favorites</th>
                             </tr>
                         </thead>
                         <tbody>
