--- a/news.html
+++ b/news.html
@@ -22,12 +22,15 @@
 </head>
 
 <body style="background-color: #EFEBE9;">
-    <div  class="main-wrapper d-lg-inline d-none">
+       <!-- Desktop Navbar of Gsmarecn -->
+    <div class="main-wrapper">
         <!-- Top Navbar -->
-        <nav class="navbar navbar-dark" id="navbar">
+        <nav class="navbar navbar-dark  d-lg-inline d-none" id="navbar">
             <div class="container const d-flex align-items-center justify-content-between">
                 <button class="navbar-toggler mb-2" type="button" onclick="toggleMenu()">
-                    <span class="navbar-toggler-icon"></span>
+                    <img style="height: 40px;"
+                        src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/684091b39228b431a556d811_download-removebg-preview.png"
+                        alt="">
                 </button>
 
                 <a class="navbar-brand d-flex align-items-center" href="#">
@@ -81,33 +84,22 @@
                         <i class="fa-solid fa-user-plus fa-lg" style="color: #ffffff;"></i>
                     </button>
                 </div>
-                <div id="leftMenu" class="container show">
-                    <div class="row">
-                        <div class="col-12 d-flex flex-wrap align-items-center" style="column-gap: 70px;">
-                            <a href="index.html" class="nav-link">Home</a>
-                            <a href="compare.html" class="nav-link">Compare</a>
-                            <a href="videos.html" class="nav-link">Videos</a>
-                            <a href="rewies.html" class="nav-link">Reviews</a>
-                            <a href="news.html" class="nav-link">News</a>
-                            <a href="featured.html" class="nav-link">Featured</a>
-                            <a href="phonefinder.html" class="nav-link">Phone Finder</a>
-                            <a href="contact.html" class="nav-link">Contact</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </nav>
 
-
     </div>
-
+    <!-- Mobile Navbar of Gsmarecn -->
     <nav id="navbar" class="mobile-navbar d-lg-none d-flex justify-content-between  align-items-center">
 
         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu"
             aria-controls="mobileMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <img style="height: 40px;"
+                src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/684091b39228b431a556d811_download-removebg-preview.png"
+                alt="">
         </button>
-        <a class="logo text-white " href="#">GSMArena</a>
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="logo text-white " href="#">GSMArena</a>
+        </a>
         <div class="d-flex justify-content-end">
             <button type="button" class="btn float-end ml-5" data-bs-toggle="tooltip" data-bs-placement="left">
                 <i class="fa-solid fa-right-to-bracket fa-lg" style="color: #ffffff;"></i>
@@ -117,7 +109,7 @@
             </button>
         </div>
     </nav>
-
+    <!-- Mobile Collapse of Gsmarecn -->
     <div class="collapse mobile-menu d-lg-none" id="mobileMenu">
         <div class="menu-icons">
             <i class="fas fa-home"></i>
@@ -157,6 +149,26 @@
         <div class="menu-buttons d-flex justify-content-center ">
             <button class="btn btn-danger w-50">📱 Phone Finder</button>
             <button class="btn btn-primary w-50">📲 My Phone</button>
+        </div>
+    </div>
+    <!-- Display Menu of Gsmarecn -->
+    <div id="leftMenu" class="container show">
+        <div class="row">
+            <div class="col-12 d-flex align-items-center   colums-gap">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="compare.html" class="nav-link">Compare</a>
+                <a href="videos.html" class="nav-link">Videos</a>
+                <a href="rewies.html" class="nav-link ">Reviews</a>
+                <a href="news.html" class="nav-link d-lg-block d-none">News</a>
+                <a href="featured.html" class="nav-link d-lg-block d-none">Featured</a>
+                <a href="phonefinder.html" class="nav-link d-lg-block d-none">Phone Finder</a>
+                <a href="contact.html" class="nav-link d-lg-block d-none">Contact</a>
+                <div style="background-color: #d50000; border-radius: 7px;" class="d-lg-none py-2"><svg
+                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="16" width="16" class="mx-3">
+                        <path fill="#ffffff"
+                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+                    </svg></div>
+            </div>
         </div>
     </div>
     <div class="container support content-wrapper" id="Top">
@@ -496,10 +508,10 @@
                 <div class="center w-100">
                     <table class="table table-sm custom-table">
                         <thead>
-                            <tr class="text-white " style="background-color: #A4C08D;">
-                                <th>#</th>
-                                <th>Devices</th>
-                                <th>Daily Hits</th>
+                            <tr class="text-white " style="background-color: #4C7273; color: white;">
+                                <th style="color: white;">#</th>
+                                <th style="color: white;">Devices</th>
+                                <th style="color: white;">Daily Hits</th>
                             </tr>
                         </thead>
                         <tbody>
