--- a/index.html
+++ b/index.html
@@ -300,40 +300,44 @@
                     Remor Mill</button>
             </div>
         </div>
-    </div>
-    <div class="container support mt-0 content-wrapper">
-        <div class="row">
-
-            <div class="col-5 col-md-4 froud">
-                 <div class="review-column-list-item review-column-list-item-secondary ">
-                    <img class="review-list-item-image "
+         <div class="row">
+            <div class="col-lg-4 col-6 conjection-froud  bobile">
+                <div class="review-column-list-item review-column-list-item-secondary ">
+                     <img class="review-list-item-image"
                         src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/6842d8cb8981edbf2586e945_gsmarena_003.jpg"
-                        alt="Moto G Stylus 5G (2025) review">
-
-                    <h1>Vivo X200 Ultra Review</h1>
-                    <img class="review-list-item-image"
-                        src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/6842dabce1783a1cc5b2d945_vivo.jpg"
                         alt="Google Pixel 9a review">
-                    <h1 style=" font-family: Instrument Sans, sans-serif;">Vivo X200 Ultra Review</h1>
-                </div>
-            </div>
-            <div class="col-5 col-md-4 froud" style="position: relative;
-            left: 20px;">   
-                  <div class="review-column-list-item review-column-list-item-secondary ">
-                    <img class="review-list-item-image "
-                        src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/6842d8cb8981edbf2586e945_gsmarena_003.jpg"
-                        alt="Moto G Stylus 5G (2025) review">
-
                     <h1>Nubia Z705 Ultra Review</h1>
                     <img class="review-list-item-image"
-                        src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/6842dabce1783a1cc5b2d945_vivo.jpg"
+                        src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/6842cab2e7b8dbeab787e9ab_gsmarena_001.jpg"
                         alt="Google Pixel 9a review">
-                    <h1>Vivo X200 Ultra Review</h1>
+                    <h1>OnePlus 13s hands on review</h1>
                 </div>
             </div>
-            <div class="col-6 col-md-4" style="margin-left: 31px; position: relative; left: 12px;">
+            <div class="col-6 col-lg-4 conjection-froud " style="margin-left: 7px;">
+                <div class="comfort d-md-none d-block">
+                   
+                    <div class="conjection position-absolute  mx-3 my-2 end-0">
+                        <i class="fa-solid fa-comment fa-sm" style="color: white;"></i>
+                        <span class="text-white ">80</span>
+                    </div>
+                    <img src="https://fdn.gsmarena.com/imgroot/reviews/25/nothing-cmf-phone-2-pro/-728x314/gsmarena_001.jpg"
+                        alt="Nothing CMF Phone 2 Pro">
+                    <h1 class="position-absolute">Nothing CMF Phone 2 Pro review</h1>
+                </div>
+                <div class="review-column-list-item review-column-list-item-secondary">
+                    <img class="review-list-item-image"
+                        src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/6842cab2e7b8dbeab787e9ab_gsmarena_001.jpg"
+                        alt="Google Pixel 9a review">
+                    <h1>OnePlus 13s hands on review</h1>
+                    <img class="review-list-item-image"
+                        src="https://cdn.prod.website-files.com/67f21c9d62aa4c4c685a7277/6842d8cb8981edbf2586e945_gsmarena_003.jpg"
+                        alt="Google Pixel 9a review">
+                    <h1>Nubia Z705 Ultra Review</h1>
+                </div>
+            </div>
+              <div class="col-6 col-md-4" style=" position: relative; left: 28px;">
                 <img class="w-100 d-none d-lg-inline"
-                    src="https://fdn.gsmarena.com/imgroot/static/banners/self/review-iphone-16-300x250.jpg" alt="">
+                    src="https://fdn.gsmarena.com/imgroot/static/banners/self/review-iphone-16-300x250.jpg" style="height: 95%;" alt="">
 
             </div>
         </div>
@@ -423,7 +427,7 @@
                 </div>
             </div>
             <div class="col-lg-4  col-12  bg-white ">
-                <h5 style="color: #090E21;" class=" mt-2 ">Latest Devices</h5>
+                <h6 style="color: #090E21; text-transform: uppercase;" class=" mt-2 ">Latest Devices</h6>
                 <div class="cent">
 
                     <div class="d-flex">
@@ -474,7 +478,7 @@
                 </div>
 
 
-                <h5 style="border-left: solid 5px grey ; color: #090E21;" class="px-3">Popular comparisons</h5>
+                <h6 style="border-left: solid 5px grey ; color: #090E21; text-transform: uppercase; margin-top: 12px;" class="px-3">Popular comparisons</h6>
 
                 <div class="sentizer bg-white mt-2 p-3 rounded shadow-sm" style="    text-transform: Uppercase;
                                             font-size: 13px;
@@ -818,8 +822,8 @@
             </div>
 
             <div class="col-lg-4  col-12 sentizer-er  bg-white p-3">
-                <h5 style="border-left: 7px solid #EFEBE9 ; color: #090E21;" class=" px-2 mt-2 d-inline mt-4">Top 10
-                    Daily Interest</h5>
+                <h6 style="border-left: 7px solid #EFEBE9 ; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">Top 10
+                    Daily Interest</h6>
 
                 <div class="center">
                     <table class="table table-sm custom-table">
@@ -884,8 +888,8 @@
                         </tbody>
                     </table>
                 </div>
-                <h5 style="border-left: 7px solid #EFEBE9 ; color: #090E21;" class=" px-2 mt-2 d-inline mt-4">Top 10 by
-                    Fans</h5>
+                <h6 style="border-left: 7px solid #EFEBE9 ; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">Top 10 by
+                    Fans</h6>
                 <div class="center" style="margin-top: 12px;">
                     <table class="table table-sm custom-table">
                         <thead>
@@ -949,9 +953,9 @@
                         </tbody>
                     </table>
                 </div>
-                <h5 style="border-left: 7px solid #EFEBE9 ; color: #090E21;" class=" px-2 mt-2 d-inline mt-4">In
+                <h6 style="border-left: 7px solid #EFEBE9 ; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">In
                     Storeies
-                    Now</h5>
+                    Now</h6>
 
                 <div class="cent">
 
@@ -1002,7 +1006,7 @@
                         </div>
                     </div>
                 </div>
-                <h5 style="border-left: solid 5px grey ; color: #090E21;" class="px-3 py-3">Electric Vehicles</h5>
+                <h6 style="border-left: solid 5px grey ; color: #090E21; text-transform: uppercase;" class="px-3 py-3">Electric Vehicles</h6>
                 <div class="d-flex">
                     <div class="col-md-4">
                         <img style="height: 60px;"
