--- a/contact.html
+++ b/contact.html
@@ -180,9 +180,9 @@
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                 </div>
             </div>
-            <div class="col-md-4 col-5 d-none d-lg-inline " style="position: relative;left: 24px;">
+             <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 40px;">
                 <button class="solid w-100 py-2">
-                    <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
+                    <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
                     Phone Finder</button>
                 <div class="devor">
                     <button class="px-3 py-1 ">Sumsung</button>
@@ -223,11 +223,11 @@
                     <button class="px-3 py-1 ">Tcl</button>
                 </div>
                 <button class="solid w-50 py-2">
-                    <i class="fa-solid fa-bars fa-sm"></i>
+                    <i class="fa-solid fa-bars fa-sm mx-2"></i>
                     All Brands</button>
-                <button class="solid py-2" style="width: 180px;">
-                    <i class="fa-solid fa-volume-high fa-sm"></i>
-                    Remor Mill</button>
+                <button class="solid py-2" style="    width: 177px;">
+                    <i class="fa-solid fa-volume-high fa-sm mx-2"></i>
+                    RUMORS MILL</button>
             </div>
         </div>
 
