--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                     </button>
                 </div>
             </div>
+           
         </nav>
 
     </div>
@@ -153,7 +154,7 @@
             <button class="btn btn-primary w-50">📲 My Phone</button>
         </div>
     </div>
-    <!-- Display Menu of Gsmarecn -->
+      <!-- Display Menu of Gsmarecn -->
     <div id="leftMenu" class="container show">
         <div class="row">
             <div class="col-12 d-flex align-items-center   colums-gap">
@@ -173,6 +174,7 @@
             </div>
         </div>
     </div>
+   
     <div class="container featured ">
         <h2 class="section">Featured</h2>
         <div class="featured-section">
@@ -252,7 +254,7 @@
             </div>
             <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 40px;">
                 <button class="solid w-100 py-2">
-                    <i class="fa-solid fa-mobile fa-sm" style="color: white;"></i>
+                    <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
                     Phone Finder</button>
                 <div class="devor">
                     <button class="px-3 py-1 ">Sumsung</button>
@@ -293,11 +295,11 @@
                     <button class="px-3 py-1 ">Tcl</button>
                 </div>
                 <button class="solid w-50 py-2">
-                    <i class="fa-solid fa-bars fa-sm"></i>
+                    <i class="fa-solid fa-bars fa-sm mx-2"></i>
                     All Brands</button>
                 <button class="solid py-2" style="    width: 177px;">
-                    <i class="fa-solid fa-volume-high fa-sm"></i>
-                    Remor Mill</button>
+                    <i class="fa-solid fa-volume-high fa-sm mx-2"></i>
+                    RUMORS MILL</button>
             </div>
         </div>
          <div class="row">
