--- a/compare.html
+++ b/compare.html
@@ -179,7 +179,8 @@
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                 </div>
             </div>
-           <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative; left: 40px;">
+           <div class="col-md-4 col-5 d-none d-lg-block" style="position: relative;
+    left: 25px;">
                 <button class="solid w-100 py-2">
                     <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
                     Phone Finder</button>
