--- a/compare.html
+++ b/compare.html
@@ -184,7 +184,7 @@
                     <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
                     Phone Finder</button>
                 <div class="devor">
-                    <button class="px-3 py-1 ">Sumsung</button>
+                    <button class="px-3 py-1 ">Samsung</button>
                     <button class="px-3 py-1 ">Xiome</button>
                     <button class="px-3 py-1 ">Asus</button>
                     <button class="px-3 py-1 ">Infinix</button>
