--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                     <i class="fa-solid fa-mobile fa-sm mx-2" style="color: white;"></i>
                     Phone Finder</button>
                 <div class="devor">
-                    <button class="px-3 py-1 ">Sumsung</button>
-                    <button class="px-3 py-1 ">Xiome</button>
+                    <button class="px-3 py-1 ">Samsung</button>
+                    <button class="px-3 py-1 ">Xiaomi</button>
                     <button class="px-3 py-1 ">Asus</button>
                     <button class="px-3 py-1 ">Infinix</button>
                     <button class="px-3 py-1 ">Apple</button>
@@ -429,7 +429,7 @@
                 </div>
             </div>
             <div class="col-lg-4  col-12  bg-white ">
-                <h6 style="color: #090E21; text-transform: uppercase;" class=" mt-2 ">Latest Devices</h6>
+                <h6 style="color: #090E21; text-transform: uppercase; font-weight: 900;" class=" mt-2 ">Latest Devices</h6>
                 <div class="cent">
 
                     <div class="d-flex">
@@ -480,7 +480,7 @@
                 </div>
 
 
-                <h6 style="border-left: solid 5px grey ; color: #090E21; text-transform: uppercase; margin-top: 12px;" class="px-3">Popular comparisons</h6>
+                <h6 style="border-left: solid 5px grey ; color: #090E21; text-transform: uppercase; font-weight: 900; margin-top: 12px;" class="px-3">Popular comparisons</h6>
 
                 <div class="sentizer bg-white mt-2 p-3 rounded shadow-sm" style="    text-transform: Uppercase;
                                             font-size: 13px;
@@ -824,7 +824,7 @@
             </div>
 
             <div class="col-lg-4  col-12 sentizer-er  bg-white p-3">
-                <h6 style="border-left: 7px solid #EFEBE9 ; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">Top 10
+                <h6 style="border-left: 7px solid #EFEBE9 ; font-weight: 900; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">Top 10
                     Daily Interest</h6>
 
                 <div class="center">
@@ -890,7 +890,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h6 style="border-left: 7px solid #EFEBE9 ; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">Top 10 by
+                <h6 style="border-left: 7px solid #EFEBE9 ; font-weight: 900; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">Top 10 by
                     Fans</h6>
                 <div class="center" style="margin-top: 12px;">
                     <table class="table table-sm custom-table">
@@ -955,7 +955,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h6 style="border-left: 7px solid #EFEBE9 ; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">In
+                <h6 style="border-left: 7px solid #EFEBE9 ; font-weight: 900; color: #090E21; text-transform: uppercase;" class=" px-2 mt-2 d-inline mt-4">In
                     Storeies
                     Now</h6>
 
@@ -1008,7 +1008,7 @@
                         </div>
                     </div>
                 </div>
-                <h6 style="border-left: solid 5px grey ; color: #090E21; text-transform: uppercase;" class="px-3 py-3">Electric Vehicles</h6>
+                <h6 style="border-left: solid 5px grey ; font-weight: 900; color: #090E21; text-transform: uppercase;" class="px-3 py-2 mt-3">Electric Vehicles</h6>
                 <div class="d-flex">
                     <div class="col-md-4">
                         <img style="height: 60px;"
